--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,9 +6,9 @@ $secondary: #fe6733 !default;
 $light: #aaa !default;
 
 // Override Bootstrap font variables
-$font-family-sans-serif: "NanumSquare", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
-$sub-font-family: "Nanum Gothic", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
-$body-bg: #f1f1f1;
+$font-family-sans-serif: "Apple SD Gothic Neo" !default;
+$sub-font-family: "Apple SD Gothic Neo" !default;
+$body-bg: #fff;
 $body-color: #222;
 $line-height-base: 1;
 // $font-size-base: 1.063rem !default;
