--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,8 +6,8 @@ $secondary: #fe6733 !default;
 $light: #aaa !default;
 
 // Override Bootstrap font variables
-$font-family-sans-serif: "Apple SD Gothic Neo" !default;
-$sub-font-family: "Apple SD Gothic Neo" !default;
+$font-family-sans-serif: "Noto Sans KR", "Apple SD Gothic Neo", "Helvetica Neue", Lato, sans-serif !default;
+$sub-font-family: "Noto Sans KR", "Apple SD Gothic Neo", "Helvetica Neue", Lato, sans-serif !default;
 $body-bg: #fff;
 $body-color: #222;
 $line-height-base: 1;
