--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,3 @@
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-@import url(https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css);
-
 @import "./variables.scss"; //Import variables (overrides Bootstrap defaults)
 // Import Bootstrap
 @import "bootstrap/scss/bootstrap.scss";
@@ -8,6 +5,7 @@
 /* Import custom styles */
 
 @import "./mixin.scss";
+@import "./fonts.scss";
 @import "./global.scss";
 @import "./buttons.scss";
 @import "./form.scss";
@@ -17,5 +15,6 @@
 @import "./navbar.scss";
 @import "./footer.scss";
 @import "./login.scss";
+@import "./main.scss";
 @import "./contents.scss";
 
