--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -1,5 +1,5 @@
 .card{
-    margin-top:30px; text-align: left; border-radius: 0; border-color: #ccc; 
+    border:0; border-radius: 0;
     .card-header{
         padding:0; background-color: #fff; border-color: #ccc; 
         .card-title{
