--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -2,14 +2,10 @@ html{font-size: 16px;}
 // @include media-breakpoint-up(md) {
 //   html{font-size: 16px;}
 // }
-
-.ico-app{background: url(../images/ico-app-96x96.png) no-repeat top center; background-size: 100% 100%; text-indent: -99999999px;}
-.ico-my{background: url(../images/ico-my-96x96.png) no-repeat top center; background-size: 100% 100%; text-indent: -99999999px;}
-.img-nothing{width:57px;}
 a:hover{text-decoration: none;}
 
 @include media-breakpoint-up(xl) {
-  .container-fluid{max-width: 1010px;}
+  .container-fluid{max-width: rem(1350px);}
 }
 .line-clamp-2{display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; overflow: hidden;}
 .bg-1{background-color: #fefefe;}
