--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,10 @@
 // Variables
 
 // Override Bootstrap primary and secondary colors
-$primary: #2a3858 !default;
-$secondary: #fe6733 !default;
-$light: #aaa !default;
+$primary: #476eff !default;
+$secondary: #141414 !default;
+$dark: #141414 !default;
+$light: #989898 !default;
 
 // Override Bootstrap font variables
 $font-family-sans-serif: "Noto Sans KR", "Apple SD Gothic Neo", "Helvetica Neue", Lato, sans-serif !default;
