--- a/scss/_contents.scss
+++ b/scss/_contents.scss
@@ -1,3 +1,8 @@
+.logo-img{
+  display: block; width: rem(180px); height:rem(30px);
+  background: url(../images/hanpass-logo-181x30-fff-3x.png) no-repeat top center; background-size: 100% auto;
+  text-indent: -99999999px;
+}
 .conts-wrap{
   position: relative; width:100%; min-height: calc(100vh - #{$nav-height} - #{$footer-height});
   .conts-lnb{
