--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -16,6 +16,7 @@ ul::after {
 p{margin:0;}
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{margin:0; line-height: 1;}
 ol, ul, dl{margin:0; padding:0;}
+.container-fluid{position: relative;}
 @include media-breakpoint-up(xl) {
   .container-fluid{max-width: rem(1280px); padding:0;}
 }
