--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -2,6 +2,20 @@
   @return $size / 16px * 1rem;
 }
 
+@mixin ellipsis($lines: 1) { // 인자 값의 기본 값은 1
+  @if ($lines == 1) {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  } @else {
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+  }
+}
+
 @mixin center-middle{
   // display: -webkit-box;
   // display: -webkit-flex;
