--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,16 +1,16 @@
 .main-visual{
-    position: relative; width:100%;
+    position: relative; width:100%; height: 100%;
+    .swiper-container{width:100%; height: 100%;}
+    // .swiper-slide{width:100% !important;}
     div[class*="main-visual-bg"] {position: absolute; left:0; top:0; right:0; bottom:0; background-size: cover;}
     .main-visual-bg-01{background: url(../images/main-visual-bg-01.png) no-repeat top center; }
     .main-visual-bg-02{background: url(../images/main-visual-bg-02.png) no-repeat top center; }
     .main-visual-bg-03{background: url(../images/main-visual-bg-03.png) no-repeat top center; }
     .main-visual-bg-04{background: url(../images/main-visual-bg-04.png) no-repeat top center; }
     .main-visual-bg-05{background: #ffffff url(../images/main-visual-bg-05.png) no-repeat left calc(50% + 350px) top rem(120px); background-size: rem(463px) auto !important;}
-    .carousel-item{
-        width:100%; height: rem(900px); overflow: hidden;
-    }
-    .carousel-caption{
-        left:50%; top:50%; transform: translate(-50%, -50%); right:inherit; bottom:inherit; text-align: left; color: #242424; 
+    .cont-box{display:block;width:100%; height: 100%; overflow: hidden;}
+    .caption{
+        position:absolute; left:50%; top:50%; transform: translate(-50%, -50%); right:inherit; bottom:inherit; text-align: left; color: #242424; 
         strong{font-size: rem(65px); font-family: Lato; font-weight: bold;}
         strong>span{font-size: rem(77px);}
         p{margin:rem(12px) 0 0 0; padding:0 rem(12px); line-height: rem(50px); font-size: rem(36px);color: #000000; font-weight: bold;}
@@ -19,8 +19,8 @@
     }
     .carousel-indicators{
         margin-bottom: rem(80px);
-        li{width:10px; height: 10px; margin:0 5px; border-radius: 50%; background: #e7e7e7; border:0;}
-        .active {width:36px; border-radius: 5px; background: #476eff;}
+        .swiper-pagination-bullet{width:10px; height: 10px; margin:0 5px; border-radius: 50%; background: #e7e7e7; border:0;}
+        .swiper-pagination-bullet-active {width:36px; border-radius: 5px; background: #476eff;}
     } 
     .carousel-control-prev-icon,
     .carousel-control-next-icon{
@@ -128,3 +128,25 @@
 	100% {-moz-transform: translateY(-8448px);-ms-transform: translateY(-8448px);-webkit-transform: translateY(-8448px);transform: translateY(-8448px)}
 }
 */
+
+/* motion keyframes */
+@keyframes verticalscroll {
+	0% {-moz-transform: translateY(0);-ms-transform: translateY(0);-webkit-transform: translateY(0);transform: translateY(0);}
+	100% {-moz-transform: translateY(-8448px);-ms-transform: translateY(-8448px);-webkit-transform: translateY(-8448px);transform: translateY(-8448px)}
+}
+@keyframes horizontalscroll {
+	0% {transform: translateX(0);}
+	100% {transform: translateX(-2440px)}
+}
+@keyframes arrowMove {
+  0%, 100% {-moz-transform: translateY(0);-ms-transform: translateY(0);-webkit-transform: translateY(0);transform: translateY(0);}
+  50% {-moz-transform: translateY(8px);-ms-transform: translateY(8px);-webkit-transform: translateY(8px);transform: translateY(8px);}
+}
+@keyframes moveshow {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+@keyframes movetop {
+  0% {opacity: 0;-moz-transform: translateY(40px);-ms-transform: translateY(40px);-webkit-transform: translateY(40px);transform: translateY(40px);}
+  100% {opacity: 1;-moz-transform: translateY(0);-ms-transform: translateY(0);-webkit-transform: translateY(0);transform: translateY(0)}
+}
