--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,36 +1,52 @@
 // Styling for the navbar
 .navbar {
-  position: absolute; width:100%; padding:0; text-align: center; z-index: 100;
-  .navbar-toggler{position: absolute; top:-5px; right:24px; margin:0; padding:0; width:rem(40px); height: rem(40px); border:0; border-radius: 0;}
+  position: fixed; top:0; left:0; padding:0; width:100%; height: auto;  text-align: center; 
+  background: transparent; transition: .3s; z-index: 100;
+  .navbar-toggler{margin:0; padding:0; width:rem(40px); height: rem(40px); border:0; border-radius: 0;}
   .navbar-toggler:hover, .navbar-toggler:focus{outline: 0;}
   .navbar-toggler-icon{
-    width:100%; height: 100%; background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center center; background-size: 40px 40px;
+    width:100%; height: 100%; background: url(../images/ic-24-popup-40x40-fff-3x.png) no-repeat center center; background-size: 40px 40px;
   }
-  .navbar-header{padding: rem(50px) 0 rem(16px) 0; width:100%;}
+  .navbar-header{padding: rem(45px) 0 rem(25px) 0; width:100%;}
   .navbar-brand {padding:0; margin:0;}
-  .navbar-nav{
-    position: relative; margin-left:rem(24px);
-    .nav-item{
+  .navbar-brand + .navbar-nav{
+    position: relative;  margin:0 rem(10px) 0 rem(24px);
+    &>ul{display: flex;}
+    &>ul>.nav-item{
       display: flex; flex-grow: 1; align-items: center; justify-content: center;
       .nav-link{padding:rem(7px) rem(24px); color:#fff; font-weight: bold;}
       &.active{
         .nav-link{color:#fff;}
       }
     }
-  }
-  .nav{
-    position: relative; margin-left:1.5rem;
-    .nav-item{
-      display: flex; flex-grow: 1; align-items: center; justify-content: center;
-      .nav-link{padding:rem(8px) rem(10px); font-family: "Helvetica Neue"; font-size: rem(14px); color:#fff; font-weight: bold; letter-spacing: rem(1px);}
-      &.active{
-        .nav-link{color:#fff;}
+    .nav{
+      position: relative; margin-left:1.5rem;
+      &>.nav-item{
+        display: flex; flex-grow: 1; align-items: center; justify-content: center;
+        .nav-link{padding:rem(8px) rem(10px); font-family: "Helvetica Neue"; font-size: rem(14px); color:#9e9e9e; font-weight: bold; letter-spacing: rem(1px);}
+        &.active{
+          .nav-link{color:#fff;}
+        }
       }
     }
   }
-
+  
+  &.on{
+    background: $white;
+    .navbar-header{padding-top:rem(30px);}
+    .logo-img{background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top center; background-size: 100% auto;}
+    .navbar-brand + .navbar-nav ul>.nav-item .nav-link,
+    .navbar-brand + .navbar-nav .nav>.nav-item .nav-link{color:#3b3b3b;}
+  }
 }
-
+@include media-breakpoint-up(lg) {
+  .navbar-expand-lg .navbar-toggler {
+    display: block;
+  }
+  .collapse:not(.show){
+    display: none !important;
+  }
+}
 /*
 @include media-breakpoint-up(md) {
   .navbar{
