--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -4,14 +4,31 @@
 .main-visual{
     position: relative; width:100%; height: 100%;
     .swiper-container{width:100%; height: 100%;}
-    // .swiper-slide{width:100% !important;}
+    .swiper-slide *{transition: all 0.1s ease-out;}
     div[class*="main-visual-bg"] {position: absolute; left:0; top:0; right:0; bottom:0; }
     .main-visual-bg-01{background: url(../images/main-visual-bg-01.png) no-repeat top center; background-size: cover;}
     .main-visual-bg-02{background: url(../images/main-visual-bg-02.png) no-repeat top center; background-size: cover;}
     .main-visual-bg-03{background: url(../images/main-visual-bg-03.png) no-repeat top center; background-size: cover;}
     .main-visual-bg-04{background: url(../images/main-visual-bg-04.png) no-repeat top center; background-size: cover;}
     .main-visual-bg-05{background: linear-gradient(238deg, #854ffd 90%, #3822f3 65%, #2372e7 42%, #0ce3e3 16%);}
-    .main-visual-obj-05{width:rem(462px); height: rem(720px); background:url(../images/main-visual-bg-05.png) no-repeat 0 0; background-size: 100% auto !important;}
+    
+    .main-visual-bg-line-01{
+        background: url(../images/main-visual-line-1300x463-3x.png) no-repeat bottom 30% left 60%; background-size: rem(1300px) auto;
+        transform: scale(0); 
+        opacity: 0;
+        transition: all 1s ease;
+        transition-delay: 0.5s;
+    }
+    .main-visual-bg-obj-05{
+        background:url(../images/main-visual-bg-05.png) no-repeat bottom 48% left 76%; background-size: rem(462px) auto;
+        opacity: 0;
+        transition: all 1s ease;
+        transition-delay: 0.5s;
+    }
+    @media (max-width: 1580px){
+        .main-visual-bg-line-01{background-position: bottom 21% left 62%; background-size: rem(1237px) auto;}
+        .main-visual-bg-obj-05{background-position: bottom 45% left 77%; background-size: rem(400px) auto;}
+    }
     .cont-box{display:block;width:100%; height: 100%; overflow: hidden;}
     .caption{
         position:absolute; left:50%; top:50%; transform: translate(-50%, -50%); right:inherit; bottom:inherit; text-align: left; color: #242424; 
@@ -20,10 +37,21 @@
         p{margin:rem(12px) 0 0 0; padding:0 rem(12px); line-height: rem(50px); font-size: rem(36px);color: #000000; font-weight: bold;}
         &.text-white,
         &.text-white>p{color:$white;}
+        strong, p{opacity: 0; transition: opacity 1s ease-out; transition-delay: 0.5s;}
+    }
+    .main-visual-bg-01{
+        .caption>strong{font-size: rem(64px); line-height: rem(68px); font-family: "Apple SD Gothic Neo"; font-weight: 600;}
+    }
+    .swiper-slide-active.effect{
+        .main-visual-bg-line-01{transform: scale(1);opacity: 1; transition-delay: .1s;}
+        .main-visual-bg-obj-05{-webkit-animation: 1.2s moveleft ease-out forwards;animation: 1.2s moveleft ease-out forwards;animation-delay:.1s}
+        strong{-webkit-animation: 1.2s movetop ease-out forwards;animation: 1.2s movetop ease-out forwards;animation-delay:.1s}
+        p{-webkit-animation: 1.2s movetop ease-out forwards;animation: 1.2s movetop ease-out forwards;animation-delay:.4s}
     }
     .carousel-indicators{
         margin-bottom: rem(80px);
-        .swiper-pagination-bullet{width:10px; height: 10px; margin:0 5px; border-radius: 50%; background: #e7e7e7; border:0;}
+        .swiper-pagination-bullet{width:10px; height: 10px; margin:0 5px; border-radius: 50%; background: #e7e7e7; border:0; cursor: pointer;}
+        .swiper-pagination-bullet:focus{outline: 0;}
         .swiper-pagination-bullet-active {width:36px; border-radius: 5px; background: #476eff;}
     } 
     .carousel-control-prev-icon,
@@ -42,6 +70,74 @@
             background:rgba(#476eff, 0.4) url(../images/icon-arrow-31x55-fff.png) no-repeat center center;
         }
     }
+}
+.exchange-calc{
+    // display: none;
+    position: absolute; left:rem(80px); top:rem(150px); padding:rem(7px) rem(20px); width:rem(404px);height: rem(599px);
+     border-radius: rem(16px); background-color: #ffffff; z-index: 100;
+     box-shadow: 0 2px 16px 2px rgba(105, 105, 105, 0.5);
+     .desc{
+         padding-left:rem(10px);  font-family: "Noto Sans KR"; color: #231916;
+         h2{margin-top:15px; font-size: rem(32px); font-weight: bold; line-height: rem(45px); }
+         p{margin-top:8px; font-size: rem(16px); font-weight: bold;line-height: 1.4;}
+         p>span{display: block;  font-weight: lighter; line-height: 1.3;}
+     }
+     .form-group{
+         margin:rem(10px) 0 0; border:0; background: transparent;
+         h5{padding-left:rem(10px); font-family: "Noto Sans KR"; font-size: rem(14px); line-height: rem(20px); font-weight: bold; color: #989898;}
+         .cal-tooltip{
+             position: absolute; right:rem(-30px); top:rem(-27px); width:rem(129px); height: rem(32px); line-height: rem(32px);
+             background: url(../images/main-cal-tooltip-129x32-3x.png) no-repeat left center; background-size: 100% auto;
+             font-family: "Apple SD Gothic Neo"; font-size: rem(14px); color: #ffffff;
+             text-align: center;
+        }
+         .input-group{
+             margin-top:rem(10px);
+             .input-group-prepend{padding:0 rem(10px) 0 rem(14px);}
+             .dropdown{
+                 width:rem(240px); 
+                 &.currency-dropdown{
+                     width:auto;
+                     .btn.dropdown-toggle{
+                         padding:0 rem(24px) 0 0;border-radius: 0; border:0; 
+                         background:transparent url(../images/icon-arrow-down-gray-25x25-3x.png) no-repeat right 5px center; background-size: rem(20px) auto;
+                    }
+                    .dropdown-menu{width:auto; min-width: inherit;}
+                    .dropdown-item{padding:rem(10px) rem(15px);}
+                }
+             }
+             .form-control-plaintext{
+                 font-family: Lato; font-size: rem(24px); font-weight: bold; color: #161616;
+                 border:0; border-radius: 0;
+                 &:focus{color:#3b57f1; outline: 0;}
+            }
+        }
+    }
+    .sending{
+        position: relative; margin-top:10px; padding:rem(38px) 0 rem(38px) rem(18px);
+        &::before{ 
+            position: absolute; left:rem(33px); top:50%; transform: translateY(-50%);
+            width:0; height:109px; border-left:2px dotted #d4d4d4; content: '';
+        }
+        .input-group{margin:0;}
+        img{width:33px; height: 33px;}
+        .dropdown{margin-left:38px;}
+    } 
+    .result{
+        margin-top:rem(20px); padding:rem(20px) 0 0 rem(20px); list-style: none; border-top:2px dotted #d4d4d4;
+        li{
+            margin-bottom:5px; line-height: 24px; 
+            font-family: "Apple SD Gothic Neo"; font-size: rem(14px); color: #161616;
+            &>img{width:rem(24px); height: rem(24px); margin-right:rem(10px);}
+            &>img.img-coupon{width:rem(41px); height: rem(33px); margin-left:rem(8px); margin-right:0;}
+        }
+    }
+}
+.currency{
+    display: inline-block; padding:0 rem(4px) 0 rem(67px); line-height: rem(40px);
+    font-family: Lato; font-size: rem(18px); font-weight: bold; color: #161616;
+    &.KRW{background: url(../images/currency/flag-korea-40x40-3x.png) no-repeat left center; background-size: rem(40px) auto;}
+    &.AUD{background: url(../images/currency/flag-aud-40x40-3x.png) no-repeat left center; background-size: rem(40px) auto;}
 }
 .main-conts-01{
     h3{font-family: Lato; font-size: rem(48px); font-weight: bold; color: #18191a;}
@@ -64,7 +160,7 @@
         }
     }
     .card{
-        width:50%; height: rem(800px); overflow: hidden; opacity: 0; transition: 1s;
+        width:50%; height: calc(100vh - 95px); overflow: hidden; opacity: 0; transition: 1s;
       &.float-left{
         font-family: "Noto Sans KR";
         small{font-size: rem(22px); line-height: 1.77; font-weight: 500; color: #18191a;}
@@ -179,3 +275,7 @@
   0% {opacity: 0;-moz-transform: translateY(40px);-ms-transform: translateY(40px);-webkit-transform: translateY(40px);transform: translateY(40px);}
   100% {opacity: 1;-moz-transform: translateY(0);-ms-transform: translateY(0);-webkit-transform: translateY(0);transform: translateY(0)}
 }
+@keyframes moveleft {
+    0% {opacity: 0;-moz-transform: translateX(40px);-ms-transform: translateX(40px);-webkit-transform: translateX(40px);transform: translateX(40px);}
+    100% {opacity: 1;-moz-transform: translateX(0);-ms-transform: translateX(0);-webkit-transform: translateX(0);transform: translateX(0)}
+  }
