--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,6 +17,8 @@
 @import "./navbar.scss";
 @import "./footer.scss";
 @import "./login.scss";
-@import "./main.scss";
 @import "./contents.scss";
+@import "./main.scss";
+@import "./_sub.scss";
+
 
