--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -2,6 +2,10 @@ html{font-size: 16px;}
 // @media (max-width: 1580px){
 //   html{font-size: 15px;}
 // }
+body{
+  // overflow-x: auto !important;
+  // overflow-y: hidden !important;
+}
 a:hover{text-decoration: none;}
 .container-fluid::after {
   display: block;
