--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -12,6 +12,7 @@ a:hover{text-decoration: none;}
   clear: both;
   content: "";
 }
+ul{list-style: none;}
 ul::after {
   display: block;
   clear: both;
