--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -17,10 +17,10 @@
 }
 
 @mixin center-middle{
-  // display: -webkit-box;
-  // display: -webkit-flex;
-  // display: -ms-flexbox;
-  // display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
